--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-loader-spinner": "4.0.0",
     "react-router-dom": "5.3.0",
     "react-slick": "0.28.1",
+    "slick-carousel": "1.8.1",
+    "stream": "0.0.2",
     "styled-components": "5.3.3"
   },
   "devDependencies": {
