--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "react-dom": "17.0.1",
     "react-icons": "4.2.0",
     "react-loader-spinner": "4.0.0",
+    "react-popup": "0.11.0",
     "react-router-dom": "5.3.0",
     "react-slick": "0.28.1",
+    "reactjs-popup": "2.0.5",
     "slick-carousel": "1.8.1",
     "stream": "0.0.2",
     "styled-components": "5.3.3"
