--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "reactjs-popup": "2.0.5",
     "slick-carousel": "1.8.1",
     "stream": "0.0.2",
-    "styled-components": "5.3.3"
+    "styled-components": "5.3.3",
+    "uuid": "8.3.2"
   },
   "devDependencies": {
     "eslint-config-airbnb": "18.2.1",
